# templates

./: .gitignore  README.md  todo.md
app-fullstacks/dev/: syncConfig.ts
app-fullstacks/public/locales/: id.json
discord-app/: .env.example  .gitignore  README.md  app.config.ts  main.ts  package.json  tsconfig.json
discord-app/assets/locales/: ar.json  en.json  es.json  hi.json  id.json  ja.json  ru.json  zh.json
discord-app/dev/: backup.ts  syncConfig.ts  translateLocales.ts
discord-app/dev/node/: buildApp.mts
discord-app/src/helpers/: getEnv.ts  sendDiscordMessage.ts  shutdownServer.ts
discord-app/src/hooks/: registerMessageCreate.hook.ts  registerSlashCommands.hook.ts
web-backend/: .gitignore  README.md  dev.ecosystem.config.cjs  ecosystem.config.cts  eslint.config.js  package.json  proxy.ts  tsconfig.json
web-backend/config/: .env.example  config.toml
web-backend/config/lang/: ar-SA.lang  en-US.lang  es-MX.lang  hi-IN.lang  id-ID.lang  ja-JP.lang  ru-RU.lang  zh-CN.lang
web-backend/dev/: backup.ts  syncConfig.ts  translateLang.ts
web-backend/sandbox/: sandbox.ts
web-backend/src/config/: getLang.ts  (+2 more)
web-fullstacks/: .gitignore  README.md  app.config.ts  dev.ecosystem.config.cjs  package.json  proxy.ts  todo.md
web-fullstacks/dev/: syncConfig.ts
web-fullstacks/sandbox/: kage-library.test.ts
webapp/: .env.example  .gitignore  app.config.ts  dev.ecosystem.config.cjs  ecosystem.config.cjs  inno.iss  package.json  proxy.ts  todo.md
webapp/dev/: syncConfig.ts
webapp/public/: manifest.json
webapp/src-tauri/: Cargo.toml  tauri.conf.json
(+50 files in other folders)
